[package]
name = "controller"
version = "0.6.14"
authors = ["<bfjelds@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../shared" }
async-std = "1.10.0"
async-trait = "0.1.51"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.17"
anyhow = "1.0.43"
kube = { version = "0.59.0", features = ["derive"] }
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["schemars", "v1_16"] }
lazy_static = "1.4.0"
log = "0.4.14"
prometheus = { version = "0.12.0", features = ["process"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
tokio = { version = "1.11.0", features = ["full"] }

[dev-dependencies]
mockall = "0.10.2"
