[package]
name = "akri-discovery-utils"
version = "0.6.14"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../shared" }
async-stream = "0.3.2"
anyhow = "1.0.43"
async-trait = { version = "0.1.51", optional = true }
futures = { version = "0.3.17", package = "futures" }
log = "0.4.14"
prost = "0.8.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.20"
tempfile = { version = "3.2.0", optional = true }
tokio = { version = "1.11.0", features = ["time", "net", "sync"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
tower = "0.4.8"

[features]
mock-discovery-handler = ["async-trait", "tempfile"]

[dev-dependencies]
async-trait = "0.1.51"
tempfile = "3.2.0"

[build-dependencies]
tonic-build = "0.5.2"
