[package]
name = "akri-shared"
version = "0.6.14"
authors = ["<bfjelds@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
either = "1.6.1"
anyhow = "1.0.43"
futures = "0.3.17"
futures-util = "0.3.17"
env_logger = "0.9.0"
hyper = { version = "0.14.12", package = "hyper" }
kube = { version = "0.59.0", features = ["derive"] }
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["schemars", "v1_16"] }
log = "0.4.14"
mockall = "0.10.2"
prometheus = { version = "0.11.0", features = ["process"] }
rand = "0.8.4"
schemars = "0.8.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.5.2"
tower = "0.4.8"
warp = "0.3.1"
