[package]
name = "akri-debug-echo"
version = "0.6.14"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
anyhow = "1.0.43"
async-trait = "0.1.51"
env_logger = "0.9.0"
futures-util = "0.3.17"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
serde_derive = "1.0.130"
tokio = { version = "1.11.0", features = ["time", "net", "sync"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }

[dev-dependencies]
akri-shared = { path = "../../shared" }
