[package]
name = "akri-onvif"
version = "0.6.14"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-shared = { path = "../../shared" }
anyhow = "1.0.43"
async-trait = "0.1.51"
bytes = "1.1.0"
env_logger = "0.9.0"
futures-util = "0.3.17"
hyper = { version = "0.14.12", package = "hyper" }
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
serde_derive = "1.0.130"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tokio = { version = "1.11.0", features = ["time", "net", "sync"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
xml-rs = "0.8.4"
yaserde = "0.7.1"
yaserde_derive = "0.7.1"

[dev-dependencies]
mockall = "0.10.2"
